[package]
name = "arc-vector"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
# smash-arc = { path = "../smash-arc", features = [ "smash-runtime", "rust-zstd" ] }
smash-arc = { git = "https://github.com/jam1garner/smash-arc", features = [ "smash-runtime", "rust-zstd" ] }
